--- a/themes/archie/static/css/updates.css
+++ b/themes/archie/static/css/updates.css
@@ -7,7 +7,7 @@
 }
 
 .update-header svg {
-  max-height: 20px;
+  height: 20px;
 }
 
 .update-tags {
